style(global-cities): introduced aspect ratio and `calc()` - converted the city fllex-gallery into flex-cards - built with calc-based dynamic sizing preventing img overflow - introduced object-fit, aspect-ratio, display-block for full visibility, fixed ratio, and removing rxtra whitespace respectively - refined styling responsiveness across all devices

--- a/e-com/style.css
+++ b/e-com/style.css
@@ -261,35 +261,57 @@ body {
 .globalcities-container {
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
     gap: 0.8rem;
     padding: 0.4rem;
 }
 .globalcity {
-    flex: 1 1 200px;
-    max-width: 100%;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    flex: 0 1 230px; /* Sets the width of each city */
+    border-radius: 16px;
+    overflow: hidden; /* Hides the overflowing content */
+    background: #f5f5f5;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease;
+    cursor: pointer;
+    box-sizing: border-box; /* Makes the border-radius work */
 }
 .globalcity:hover {
-    transform: scale(1.01);
+    transform: scale(1.02);
 }
+ /* TODO: Responsive aspect ratio of img [ IMP SNIPPET ]  */
 .globalcity img {
-    width: 100%;
-    max-width: 100%;
-    object-fit: cover;
-    height: 400px;
-    display: block;
+    width: calc(100% - 12px); /** Adjusts the width of the image **/
+    height: calc(100% - 12px); /** Adjusts the height of the image */
+    margin: 6px 6px 2px 6px; /** Adjusts the margins of the image */
+    border-radius: 12px;
+    aspect-ratio: 4 / 3; /** Sets the aspect ratio of the image */
+    object-fit: cover; /** Ensures the image is fully visible */
+    height: auto; 
+    display: block; /** Removes any extra whitespace around the image */
 }
 .cityinfo {
-    background: #fafafa;
-    color: #000000;
+    background: #f5f5f5;
+    color: #262626;
     text-align: center;
-    padding: 8px 0;
-    font-size: 1.2rem;
+    padding: 2px 0 3px;
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.125rem;
     font-weight: 600;
-    letter-spacing: -0.6px;
+    letter-spacing: -0.8px;
     border-radius: 20px;
+}
+@media (max-width: 768px) {
+    .globalcity{
+         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    }
+    .globalcity img {
+        flex: 1 1 auto;
+        /* aspect-ratio: 6 / 3; */
+    }
+    .cityinfo {
+        padding: 2px 0 3px;
+        font-size: 1rem;
+        letter-spacing: -0.6px;
+    }
 }
